Remove redundant config entries